--- a/src/components/member_section.css
+++ b/src/components/member_section.css
@@ -50,7 +50,7 @@
 }
 
 .button-section1 img {
-    width: 15px;
+    width: 20px;
 }
 
 .button-section1 ul {
@@ -58,11 +58,14 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
+    display: flex;
+    gap: 20px;
 }
 
-.button-section1 li {
-    display: inline;
-    padding: 15px;
+.button-sec2{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
 
 .member_section h1 {
